feat(security): Enhance JwtAuthenticationFilter to extract JWT from cookies and improve logging